# drl-btc-cloud

./: .gitignore  DEPLOYMENT_ISSUES_REPORT.md  Makefile  Overview.md  README.md  VERIFICATION.md  btc_env.py  config.py  config.yaml  fetch_data.py  generate_mock_data.py  pyproject.toml  requirements.txt  train.py
app/: .gcloudignore  Dockerfile  main.py  main_simple.py  requirements.txt  requirements_simple.txt
app/train/: submit_job.py
cloudrun-fetch-data/: main.py  requirements.txt
infra/: deploy.sh
train/: btc_env.py  submit_job.py  train.py
train/tensorboard_logs/PPO_1/: events.out.tfevents.1756268045.CHINAMI-FBNR672.68148.0
train/tensorboard_logs/PPO_2/: events.out.tfevents.1756268065.CHINAMI-FBNR672.68558.0
